--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@ form {margin:30px 0; padding:0}
 .form-input input.error,
 .form-input textarea.error {border-color:#f00}
 
-label.error {display:none !important}
+label.error {display:block; color:#f00; font-size:14px; line-height:20px; padding:4px 0 0 0}
 
 ::-ms-clear {display:none}
 
@@ -60,6 +60,30 @@ label.error {display:none !important}
     .form-submit button {display:block; width:100%}
     .form-submit button:before {left:13px; right:13px}
 }
+
+.form-loading {display:none; position:absolute; left:0; top:0; right:0; bottom:0; z-index:90; background:rgba(255, 255, 255, .95)}
+.form-loading-content {position:absolute; left:0; top:50%; right:0; text-align:center; margin-top:-127px}
+.form-loading-icon {width:178px; height:178px; margin:0 auto; animation:loading-rotate 3s steps(12, end) infinite; position:relative}
+.form-loading-icon i {display:block; position:absolute; left:0; top:0; right:0; bottom:0}
+.form-loading-icon i:nth-child(1) {opacity:1; transform:rotate(0deg)}
+.form-loading-icon i:nth-child(2) {opacity:.3; transform:rotate(30deg)}
+.form-loading-icon i:nth-child(3) {opacity:.3; transform:rotate(60deg)}
+.form-loading-icon i:nth-child(4) {opacity:.3; transform:rotate(90deg)}
+.form-loading-icon i:nth-child(5) {opacity:.3; transform:rotate(120deg)}
+.form-loading-icon i:nth-child(6) {opacity:.3; transform:rotate(150deg)}
+.form-loading-icon i:nth-child(7) {opacity:.3; transform:rotate(180deg)}
+.form-loading-icon i:nth-child(8) {opacity:.3; transform:rotate(210deg)}
+.form-loading-icon i:nth-child(9) {opacity:.44; transform:rotate(240deg)}
+.form-loading-icon i:nth-child(10) {opacity:.65; transform:rotate(270deg)}
+.form-loading-icon i:nth-child(11) {opacity:.86; transform:rotate(300deg)}
+.form-loading-icon i:nth-child(12) {opacity:.93; transform:rotate(330deg)}
+.form-loading-icon i:after {content:""; display:block; width:12px; height:52px; border-radius:6px; background:#939; position:absolute; left:50%; top:0; margin-left:-6px}
+@keyframes loading-rotate {
+    100% {
+        transform:rotate(360deg)
+    }
+}
+.form-loading-text {font-weight:bold; font-size:30px; line-height:36px; color:#000; text-align:center; padding:40px 0 0 0}
 
 .wrapper {min-width:480px; width:100%; min-height:100%; position:relative; overflow:hidden}
 .wrapper-inner {padding:0 0 345px 0}
@@ -699,6 +723,30 @@ footer {background:#000; height:345px; position:relative; margin:-345px 0 0 0; m
     .contacts-title {padding-top:95px}
 }
 
+.baloons-list {margin:0 -15px; font-size:0; line-height:0; letter-spacing:-1px; padding:51px 0 28px 0}
+.baloons-item {display:inline-block; vertical-align:top; width:33.33%; padding:25px 15px; box-sizing:border-box}
+.baloons-item a {display:block; max-width:330px; margin:0 auto; text-decoration:none; color:#000}
+.baloons-item-preview img {width:100%; border-radius:50%; transition:color .1s 0s ease-in-out}
+@media screen and (min-width:1200px) {
+    .baloons-item a:hover .baloons-item-preview img {box-shadow:0 5px 29px rgba(162, 160, 162, .88)}
+}
+.baloons-item-title {font-weight:bold; font-size:24px; line-height:30px; letter-spacing:0; text-align:center; color:#000; padding:29px 0 0 0}
+.baloons-item-text {font-size:16px; line-height:25px; letter-spacing:0; text-align:center; color:#666; padding:9px 0 0 0}
+.baloons-btn {text-align:center; font-size:12px; line-height:45px; font-weight:bold; text-transform:uppercase; letter-spacing:2px}
+.baloons-btn a {display:inline-block; vertical-align:top; position:relative; color:#fff; text-decoration:none; padding:0 28px}
+.baloons-btn a:before {content:""; display:block; position:absolute; left:0; top:0; right:0; bottom:0; background:#939; transform:skewX(-27deg)}
+.baloons-btn a:hover:before {opacity:.9}
+.baloons-btn-text {position:relative}
+
+@media screen and (max-width:1199px) {
+    .baloons-item {width:50%}
+}
+
+@media screen and (max-width:767px) {
+    .baloons-item {width:100%}
+    .baloons-btn a {padding:0; text-align:center; display:block}
+}
+
 .window-open {overflow:hidden}
 .window-open body {height:auto; overflow:hidden}
 
@@ -707,13 +755,21 @@ footer {background:#000; height:345px; position:relative; margin:-345px 0 0 0; m
 .window-container {position:absolute; z-index:99999; left:50%; top:50%}
 .window-container-load {position:fixed; left:-9999px; top:-9999px}
 .window-content {position:relative; background:#fff}
-.window-close {display:block; position:absolute; width:12px; height:12px; right:-5px; top:-7px}
+.window-close {display:block; position:absolute; width:12px; height:12px; right:-5px; top:-7px; z-index:99}
 .window-close:after {content:""; display:block; position:absolute; left:0; top:0; width:12px; height:12px; background:url(../images/window-close.svg) no-repeat; background-size:100%}
 .window-close:before {content:""; display:block; position:absolute; left:-19px; top:-19px; right:-19px; bottom:-19px; background:#939; transform:skewX(-27deg)}
 
-.window-order {width:690px; padding:42px 75px 25px 75px}
+.window-order {width:690px; padding:42px 75px 25px 75px; position:relative}
 .window-order-title {text-align:center; font-weight:bold; font-size:30px; line-height:36px; padding:0 0 18px 0}
 
 @media screen and (max-width:1199px) {
     .window-order {width:360px; padding-left:30px; padding-right:30px}
 }
+
+.window-success-icon {width:176px; height:176px; background:url(../images/success.png); margin:34px auto 0 auto}
+.window-success-text {text-align:center; font-weight:bold; font-size:30px; line-height:38px; padding:40px 0 0 0}
+.window-success-link {text-align:center; font-size:12px; line-height:45px; font-weight:bold; text-transform:uppercase; letter-spacing:2px; padding:62px 0 52px 0}
+.window-success-link a {display:inline-block; vertical-align:top; position:relative; color:#fff; text-decoration:none; width:180px; text-align:center}
+.window-success-link a:before {content:""; display:block; position:absolute; left:0; top:0; right:0; bottom:0; background:#939; transform:skewX(-27deg)}
+.window-success-link a:hover:before {opacity:.9}
+.window-success-link-text {position:relative}
