--- a/css/styles.css
+++ b/css/styles.css
@@ -88,7 +88,7 @@ label.error {display:block; color:#f00; font-size:14px; line-height:20px; paddin
 
 .wrapper {min-width:480px; width:100%; min-height:100%; position:relative; overflow:hidden}
 .wrapper-inner {padding:0 0 285px 0}
-.header-fixed .wrapper-inner {padding-top:150px}
+.header-fixed .wrapper-inner {padding-top:110px}
 
 @media screen and (max-width:1199px) {
     .wrapper-inner {padding:0 0 1050px 0}
@@ -105,16 +105,16 @@ label.error {display:block; color:#f00; font-size:14px; line-height:20px; paddin
     .container {padding:0 60px}
 }
 
-header {background:#fff; height:150px}
+header {background:#fff; height:110px}
 .header-fixed header {position:fixed; left:0; top:0; right:0; z-index:99; box-shadow:0 0 5px rgba(0, 0, 0, .25)}
 
-.logo {float:left; width:217px; height:60px; background:url(../images/logo.svg) no-repeat; background-size:100%; margin:45px 0 0 0}
+.logo {float:left; width:217px; height:60px; background:url(../images/logo.svg) no-repeat; background-size:100%; margin:25px 0 0 0}
 
 @media screen and (max-width:1199px) {
-    .logo {margin:45px 0 0 -35px}
+    .logo {margin:25px 0 0 -35px}
 }
 
-.title {float:left; color:#666; font-size:16px; line-height:19px; margin:56px 0 0 23px; text-indent:12px; position:relative}
+.title {float:left; color:#666; font-size:16px; line-height:19px; margin:36px 0 0 23px; text-indent:12px; position:relative}
 .title:before {content:""; display:block; width:32px; height:62px; background:url(../images/title.svg) no-repeat; background-size:100%; position:absolute; left:-26px; top:-11px}
 
 @media screen and (max-width:1199px) {
@@ -124,7 +124,7 @@ header {background:#fff; height:150px}
 .mobile-menu {display:none}
 
 @media screen and (max-width:1199px) {
-    .mobile-menu {display:block; float:right; position:relative; margin:64px -35px 0 40px}
+    .mobile-menu {display:block; float:right; position:relative; margin:44px -35px 0 40px}
     .mobile-menu-link {display:block; width:30px; border-top:2px solid #000; border-bottom:2px solid #000; position:relative; height:18px}
     .mobile-menu-link:after {content:""; display:block; position:absolute; left:0; top:8px; right:0; height:2px; background:#000}
     .mobile-menu-content {display:none}
@@ -138,9 +138,9 @@ header {background:#fff; height:150px}
     .mobile-menu-content ul li a:hover {text-decoration:underline}
 }
 
-.header-phone {float:right; margin:55px 0 0 0; width:40px; height:40px; background:url(../images/header-phone.png) no-repeat}
+.header-phone {float:right; margin:35px 0 0 0; width:40px; height:40px; background:url(../images/header-phone.png) no-repeat}
 
-nav {float:right; font-weight:bold; font-size:15px; line-height:25px; text-transform:uppercase; margin:62px 50px 0 0; letter-spacing:2px}
+nav {float:right; font-weight:bold; font-size:15px; line-height:25px; text-transform:uppercase; margin:42px 50px 0 0; letter-spacing:2px}
 nav ul {margin:0; padding:0; list-style:none}
 nav ul li {float:left; margin:0 0 0 30px; padding:0; position:relative}
 nav ul li:first-child {margin:0}
@@ -163,7 +163,7 @@ nav ul li.active a {color:#fff}
     nav {display:none}
 }
 
-.menu-add {float:right; margin:65px 60px 0 0; position:relative}
+.menu-add {float:right; margin:45px 60px 0 0; position:relative}
 .menu-add-icon {width:30px; height:19px; border-top:1px solid #000; border-bottom:1px solid #000; position:relative; cursor:pointer}
 .menu-add-icon:before {content:""; display:block; position:absolute; left:0; top:9px; right:0; height:1px; background:#000}
 
@@ -561,7 +561,7 @@ footer {background:#000; height:285px; position:relative; margin:-285px 0 0 0; m
 .service-gallery {float:left; width:66.66%; line-height:0}
 .service-gallery-big {position:relative; cursor:pointer; width:100%; font-size:0; line-height:0; letter-spacing:-1px; white-space:nowrap; overflow:hidden}
 .service-gallery-big-list {position:relative}
-.service-gallery-big-item {display:inline-block; vertical-align:top; width:100%}
+.service-gallery-big-item {display:inline-block; vertical-align:top; width:100%; max-height:calc(100vh - 289px)}
 .service-gallery-big-item a {display:block; position:relative}
 .service-gallery-big-item img {display:block; width:100%}
 .service-gallery-big-item a:after {content:""; display:block; width:30px; height:30px; position:absolute; left:20px; top:20px; background:url(../images/service-gallery-zoom.png)}
@@ -583,6 +583,7 @@ footer {background:#000; height:285px; position:relative; margin:-285px 0 0 0; m
 @media screen and (max-width:1199px) {
     .service-gallery {float:none; width:auto; margin:0 -60px}
     .service-gallery-preview {display:none}
+    .service-gallery-big-item {max-height:none}
     .service-gallery .slick-dots {z-index:2; font-size:0; line-height:0; letter-spacing:-1px; margin:0; padding:0; list-style:none; position:absolute; bottom:33px; left:0; right:0; text-align:center}
     .service-gallery .slick-dots li {margin:0 0 0 10px; padding:0; display:inline-block; vertical-align:top}
     .service-gallery .slick-dots li:first-child {margin:0}
@@ -621,9 +622,10 @@ footer {background:#000; height:285px; position:relative; margin:-285px 0 0 0; m
 .service-balls-list {margin:56px -15px 0 -15px; font-size:0; line-height:0; letter-spacing:-1px}
 .service-balls-list-inner {position:relative; width:100%; white-space:nowrap}
 .service-balls-item {display:inline-block; vertical-align:top; width:25%; padding:15px; box-sizing:border-box}
-.service-balls-item a {display:block; border-radius:50%; max-width:270px; margin:0 auto}
+.service-balls-item a {display:block; border-radius:50%; max-width:270px; margin:0 auto; text-decoration:none; color:#000}
 .service-balls-item img {display:block; width:100%; border-radius:50%; transition:color .1s 0s ease-in-out}
 .service-balls-item a:hover img {box-shadow:0 5px 29px rgba(162, 160, 162, .88)}
+.service-balls-item-title {font-weight:bold; font-size:24px; line-height:30px; letter-spacing:0; text-align:center; padding:29px 0 0 0}
 .service-balls-list .slick-prev,
 .service-balls-list .slick-next {display:block; position:absolute; z-index:2; top:50%; width:47px; height:131px; border:none; border-radius:0; margin:-65px 0 0 0; padding:0; outline:none; background:url(../images/service-balls-arrows.png); -webkit-appearance:none; cursor:pointer; transition:all .1s ease-in-out}
 .service-balls-list .slick-prev {left:-150px}
@@ -824,3 +826,6 @@ footer {background:#000; height:285px; position:relative; margin:-285px 0 0 0; m
 .window-success-link a:before {content:""; display:block; position:absolute; left:0; top:0; right:0; bottom:0; background:#939; transform:skewX(-27deg)}
 .window-success-link a:hover:before {opacity:.9}
 .window-success-link-text {position:relative}
+
+.window-balls {width:270px; padding:30px}
+.window-balls .baloons-btn {padding:30px 0 0 0}
